[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agriconnect"
version = "1.0.0"
description = "A multi-agent system for agriculture with an MCP proxy."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Tell setuptools to find packages in the root directory.
[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "common*", "mcp_server*"]